welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:7: error: not found: value faire
def faireMotif { faire(V);for (j<-1 to 5) {avance()}
                 ^