welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() { def faireV() {
avance();baisseBrosse();leveBrosse();avance();gauche();avance();baisseBrosse();
leveBrosse();recule();droite();avance();baisseBrosse();leveBrosse();avance();gauche();
}
def faireMotif { faire(V);for (j<-1 to 5) {avance()}
for(i<-1 to 4) {
	faireV();
}}
}
